Fixed tolist and updated javadoc