@@ -1,6 +1,7 @@
 package model;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class AmountFilter implements TransactionFilter {
     @Override
@@ -12,7 +13,7 @@ public class AmountFilter implements TransactionFilter {
 
             return transactions.stream()
                     .filter(transaction -> transaction.getAmount() == Double.parseDouble(amount))
-                    .toList();
+                    .collect(Collectors.toList());
 
         } catch (NumberFormatException e) {
             return List.of();
